# elderscrolls-rust

./: .gitignore  Cargo.toml  README.MD  index  rust-toolchain  shell.nix
bsa/: Cargo.toml
bsa/examples/: create-options.rs  create-simple.rs  extract.rs  open-any-iterate.rs  open-any.rs  open-v001-iterate.rs  open-v001.rs  open-v10x-iterate.rs  open-v10x.rs
bsa/src/: archive.rs  bin.rs  bzstring.rs  compress.rs  hash.rs  lib.rs  magicnumber.rs  read.rs  str.rs  v001.rs  v103.rs  v104.rs  v105.rs  v10x.rs  version.rs  write.rs
bsabin/: Cargo.toml
bsabin/src/: cli.rs  main.rs
bsabin/test-data/: .gitignore
bsalib/: Cargo.toml
bsalib/src/: archive.rs  bin.rs  hash.rs  lib.rs  magicnumber.rs  read.rs  str.rs  v001.rs  v103.rs  v104.rs  v105.rs  v10x.rs  version.rs  write.rs
esp/: Cargo.toml
esp/examples/: dump.rs
esp/src/: bin.rs  lib.rs  raw.rs  record.rs  typed.rs
esp/src/typed/: clas.rs  error.rs  fact.rs  glob.rs  gmst.rs  group.rs  kywd.rs  mod.rs  record.rs  tes4.rs  txst.rs  types.rs  vmad.rs
nix/: sources.json
src/: bsa.rs  main.rs
src/bsa/: archive.rs  bin.rs  bzstring.rs  hash.rs  lib.rs  open.rs  tree.rs  v001.rs  v103.rs  v104.rs  v105.rs  v10x.rs  version.rs
test-dir/: some-file
