[package]
name = "bsa"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "rust library for creating and extracting Bethesda Softworks Archives"
homepage = "https://github.com/chisui/bsa"
repository = "https://github.com/chisui/bsa"
documentation = "https://github.com/chisui/bsa"
readme = "../README.MD"
keywords = ["bethesda", "skyrim", "fallout", "bsa", "archive"]
categories = ["encoding", "development-tools", "compression", "games"]
include = [ "../README.MD" ]

[lib]

[dependencies]
enumflags2 = "0.7.1"
bytemuck = { version = "1.5.1", features = ["derive"] }
lz4 = "1.23.2"
libflate = "1.1.0"
thiserror = "1.0.28"
newtype-derive-2018 = "0.0.3"
macro-attr-2018 = "1.1.1"
