[package]
name = "bsabin"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "cli for creating and extracting Bethesda Softworks Archives"
homepage = "https://github.com/chisui/bsa"
repository = "https://github.com/chisui/bsa"
documentation = "https://github.com/chisui/bsa"
readme = "../README.MD"
keywords = ["bethesda", "skyrim", "fallout", "bsa", "archive"]
categories = ["command-line-utilities", "encoding", "development-tools", "compression", "games"]

[[bin]]
name = "bsa"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
glob = "0.3.0"
thiserror = "1.0.28"
bsalib = { version = "0.1.0", path = "../bsalib" }
